--- a/twiwallet/templates/base.html
+++ b/twiwallet/templates/base.html
@@ -1,20 +1,129 @@
-{% load users_tags %}
+<!DOCTYPE html>
+<html lang="en"><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <title>{% block title %}base{% endblock %}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-{% if user %}
-	{% login_widget user %}
-{% endif %}
+    <!-- Le styles -->
+    <link href="{%url static 'fluid_files/bootstrap.css' %}" rel="stylesheet">
+    <style type="text/css">
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+      }
+      .sidebar-nav {
+        padding: 9px 0;
+      }
+    </style>
+    <link href="{%url static 'fluid_files/bootstrap-responsive.css' %}" rel="stylesheet">
 
-<head>
-	<title>{% block title %}base{% endblock %}</title>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" href="/site_media/style.css" type="text/css" media="screen">	
-	<link rel="stylesheet" href="http://yandex.st/jquery-ui/1.8.15/themes/humanity/jquery.ui.all.min.css">
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le fav and touch icons -->
+    <link rel="shortcut icon" href="http://twitter.github.com/bootstrap/assets/ico/favicon.ico">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="http://twitter.github.com/bootstrap/assets/ico/apple-touch-icon-57-precomposed.png">
+	
+	<link rel="stylesheet" href="http://yandex.st/jquery-ui/1.8.15/themes/redmond/jquery.ui.all.min.css">
 	<script src="http://yandex.st/jquery/1.7.1/jquery.js"></script>
 	<script src="http://yandex.st/jquery-ui/1.8.16/jquery-ui.js"></script>
 	{%block head%}
 	{% endblock %}
-</head>
+  </head>
 
-{% block body %}
+  <body>
 
-{% endblock %}
+  	
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="#">#twiwallet</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+            {% load users_tags %}
+			{% if user %}
+				{% login_widget user %}
+			{% endif %}
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    
+ 
+    <div class="container-fluid">
+      <div class="row-fluid">
+       {% block sidebar %}
+        <div class="span3">
+          <div class="well sidebar-nav">
+            <ul class="nav nav-list">
+              <li class="nav-header">{% block sidebar-title %}Sidebar{% endblock %}</li>
+              {% block links %}
+              {% endblock %}
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->
+        {% endblock %}
+        
+        <div class="span9">
+          <div class="hero-unit">
+          {% block body %}   
+            <h1>Hello, world!</h1>
+            <p>This is a template for a simple marketing or 
+informational website. It includes a large callout called the hero unit 
+and three supporting pieces of content. Use it as a starting point to 
+create something more unique.</p>
+            <p><a class="btn btn-primary btn-large">Learn more »</a></p>
+            {% endblock %}
+          </div>
+
+        </div><!--/span-->
+        
+      </div><!--/row-->
+
+      <hr>
+
+      <footer>
+        <p>© Company 2012</p>
+      </footer>
+
+    </div><!--/.fluid-container-->
+    
+
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    
+    <script src="{%url static 'fluid_files/bootstrap-transition.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-alert.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-modal.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-dropdown.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-scrollspy.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-tab.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-tooltip.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-popover.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-button.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-collapse.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-carousel.js' %}"></script>
+    <script src="{%url static 'fluid_files/bootstrap-typeahead.js' %}"></script>
+
+</body></html>
+
+
+
+
