--- a/twiwallet/templates/users/login_widget.html
+++ b/twiwallet/templates/users/login_widget.html
@@ -1,5 +1,6 @@
 {% if user.is_authenticated %} 
-	Hello {{ user.username }} <a href = {% url logout %}>Logout</a>
+    <p class="navbar-text pull-right">Logged in as <a href="#">{{ user.username }}</a></p>
 {% else %}
-	<a href = {% url login %}>Login</a>
+	<p class="navbar-text pull-right"><a href = {% url login %}>Login</a></p>
+	
 {% endif %}
